# bitcoints

./: .gitignore  Cargo.toml  README.md  alice.priv.cbor  alice.pub.pem  blockchain.cbor  bob.priv.cbor  bob.pub.pem  wallet_config.toml
lib/: Cargo.toml
lib/src/: crypto.rs  error.rs  lib.rs  network.rs  sha256.rs  types.rs  util.rs
lib/src/types/: block.rs  blockchain.rs  transaction.rs
miner/: Cargo.toml  alice.priv.cbor  alice.pub.pem
miner/src/: main.rs
node/: Cargo.toml  blockchain.cbor
node/src/: ;  handler.rs  main.rs  util.rs
wallet/: Cargo.toml
wallet/logs/: wallet.log.2025-09-26
wallet/src/: core.rs  main.rs  task.rs  ui.rs  util.rs
