[package]
name = "btclib"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
ciborium = "0.2.2"
ecdsa = { version = "0.16.9", features = ["signing", "verifying", "serde", "pem"] }
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["serde", "pem"] }
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
sha256 = "1.6.0"
thiserror = "2.0.16"
uint = "0.10.0"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
